# TradingOppurtunityapp

./: .env.example  .gitignore  README.md  conftest.py  netlify.toml  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/api/: Dockerfile
apps/api/src/: main.py
apps/api/src/routers/: backtest.py  india_scan.py  scan.py  watchlist.py
apps/mobile/: App.tsx  README-MOBILE.md  app.json  create_assets.py  eas.json  package.json
apps/mobile/assets/: PLACEHOLDER.txt
apps/mobile/src/api/: client.ts
apps/mobile/src/components/: MetricsGrid.tsx  ResultCard.tsx  TemplateCard.tsx
apps/mobile/src/navigation/: AppNavigator.tsx  types.ts
apps/mobile/src/screens/: BacktestScreen.tsx  ScanDetailScreen.tsx  ScanScreen.tsx
apps/web/: index.html  package.json  vite.config.mts
apps/web/e2e/: smoke.spec.ts
apps/web/src/api/: client.ts
apps/web/src/app/: app.tsx
apps/web/src/components/: BacktestForm.tsx  BacktestGuide.tsx  BacktestResultPanel.tsx  EquityCurveChart.tsx  MarketAssetSelector.tsx  MiniPriceChart.tsx  RunScanButton.tsx  ScanDetailView.tsx  ScanResultsTable.tsx  ScanTemplateSelector.tsx  WatchlistManager.tsx
