[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "trading-opportunity-app"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "vectorbt>=0.26.1",
    "optopsy>=1.0.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
    "breeze-connect>=1.0.0",
    "aiohttp>=3.9.0",
    "apscheduler>=3.10.0",
    "websockets>=12.0",
    "finnhub-python>=2.4.20",
    "respx>=0.21.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.100.0",
    "aiosqlite>=0.20.0",
    "yfinance>=0.2.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--import-mode=importlib"
testpaths = ["packages", "apps"]
pythonpath = ["."]
markers = [
    "integration: marks tests requiring live API keys (deselect with -m 'not integration')",
    "benchmark: marks performance benchmark tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
